--- a/.github/workflows/discord-notify-bot.yml
+++ b/.github/workflows/discord-notify-bot.yml
@@ -3,8 +3,9 @@ name: Discord Notify Bot
 on:
   workflow_dispatch:
 
-  schedule:
-    - cron: "*/10 * * * *"
+  # 스케줄러 비활성화 
+  # schedule:
+  #   - cron: "*/10 * * * *"
 
 jobs:
   notify:
